--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+    compile 'com.android.support:appcompat-v7:28.0.0' // appcompat library
+    compile 'com.android.support:design:28.0.0'
+    implementation 'com.karumi:dexter:6.2.1'
+    implementation 'net.steamcrafted:load-toast:1.0.12'
 }
